@@ -524,6 +524,24 @@ AS_IF([test "x$with_xattr_support" != xno],
 
 AC_SUBST(ATTRLIB)
 
+AC_MSG_CHECKING(for e2fsattrs-support)
+AC_ARG_WITH([e2fsattrs],
+	[AC_HELP_STRING([--with-e2fsattrs],
+		[use e2fsattrs (no checking)])],
+	[with_e2fsattrs_support="$withval"],
+	[with_e2fsattrs_support=no]
+)
+
+AS_IF([test "x$with_e2fsattrs_support" != xno],
+	[AC_DEFINE(WITH_E2FSATTRS,1,[use e2fsattrs])
+	E2FSATTRSLIB=-le2p
+	compoptionstring="${compoptionstring}WITH_E2FSATTRS\\n"
+	aideextragroups="${aideextragroups}+e2fsattrs"
+	AC_MSG_RESULT(yes)],
+	[AC_MSG_RESULT(no)]
+)
+
+AC_SUBST(E2FSATTRSLIB)
 
 # Check whether LFS has explicitly been disabled
 AC_ARG_ENABLE(lfs,[  --disable-lfs           Disable large file support on 32-bit platforms], [aide_lfs_choice=$enableval], [aide_lfs_choice=yes])
