@@ -24,7 +24,7 @@ attributes=( "filename" "linkname" "perm" "uid" "gid" "size" "atime" \
     "rmd160" "tiger" "crc32" "haval" "gost" "crc32b" "attr" \
     "acl" "bsize" "rdev" "dev" "checkmask" "growingsize" "checkinode" \
     "allownewfile" "allowrmfile" "sha256" "sha512"  "selinux" \
-    "xattrs" "whirlpool" "ftype" )
+    "xattrs" "whirlpool" "ftype" "e2fsattrs" )
 
 NAME="aide-attributes"
 
