@@ -208,6 +208,7 @@ Here is an example configuration.</p>
    #acl:    access control list
    #selinux SELinux security context
    #xattrs:  extended file attributes
+   #e2fsattrs: file attributes on a second extended file system
 
    # You can alse create custom rules - my home made rule definition goes like this 
    #
