@@ -33,4 +33,8 @@ list* do_md(list* file_lst,db_config* conf);
 
 void acl2line(db_line* line);
 
+#ifdef WITH_E2FSATTRS
+void e2fsattrs2line(db_line* line);
+#endif
+
 #endif /* _DO_MD_H_INCLUDED */
