@@ -25,7 +25,7 @@ AM_YFLAGS= -d
 #AM_LFLAGS= -d
 LEX_OUTPUT_ROOT = lex.yy
 
-LDADD = -lm @CRYPTLIB@ @ACLLIB@ @SELINUXLIB@ @AUDITLIB@ @ATTRLIB@ @ELFLIB@
+LDADD = -lm @CRYPTLIB@ @ACLLIB@ @SELINUXLIB@ @AUDITLIB@ @ATTRLIB@ @E2FSATTRSLIB@ @ELFLIB@
 AM_CFLAGS = @AIDE_DEFS@ -W -Wall -g
 
 CLEANFILES = conf_yacc.h conf_yacc.c conf_lex.c db_lex.c *~
