@@ -511,6 +511,9 @@ void update_db_out_order(DB_ATTR_TYPE attr)
   if((attr&DB_SELINUX) && (check_dboo(db_selinux)!=RETFAIL)){
     conf->db_out_order[conf->db_out_size++]=db_selinux;
   }
+  if((attr&DB_E2FSATTRS) && (check_dboo(db_e2fsattrs)!=RETFAIL)){
+    conf->db_out_order[conf->db_out_size++]=db_e2fsattrs;
+  }
   if((attr&DB_CHECKMASK) && (check_dboo(db_checkmask)!=RETFAIL)){
     conf->db_out_order[conf->db_out_size++]=db_checkmask;
   }
